--- a/Final Project_WebDesign/contact.html
+++ b/Final Project_WebDesign/contact.html
@@ -33,6 +33,9 @@
 <h2>(217)-555-1234</h2>
 <h2>email: <a href="mailto:contact@donutdelights.com">contact@donutdelights.com</a></h2>
     </div>
+<div class="Map">
+<iframe id="GMaps" width="600" height="446.5" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=2112%20main%20street%20Urbana%2C%20Illinois%2061801&key=AIzaSyB3oUOHGS3gflPDEXAOAc0G8tAhI6Txm4Y" allowfullscreen></iframe>
+</div>
 
     </div> <!--End of background -->
 
