--- a/Final Project_WebDesign/home.html
+++ b/Final Project_WebDesign/home.html
@@ -54,19 +54,19 @@
                             <!--show how to change caption color in css-->
                         </div> 
                         <div class="item">
-                            <img src="img/Menu_Banner_BDD.png" alt="Second Banner (Bakers Dozen Donuts)">
+                            <img src="img/Menu_Banner_BDD_Full.png" alt="Second Banner (Bakers Dozen Donuts)">
                             <div class="carousel-caption"></div>
                         </div> 
                         <div class="item">
-                            <img src="img/Menu_Banner_RD.png" alt="Third Banner (Regular Donuts)">
+                            <img src="img/Menu_Banner_RD_Full.png" alt="Third Banner (Regular Donuts)">
                             <div class="carousel-caption"></div>
                         </div> 
                         <div class="item">
-                            <img src="img/Menu_Banner_FD.png" alt="Fourth Banner (Fancy Donuts)">
+                            <img src="img/Menu_Banner_FD_Full.png" alt="Fourth Banner (Fancy Donuts)">
                             <div class="carousel-caption"></div>
                         </div>
                         <div class="item">
-                            <img src="img/Menu_Banner_FC.png" alt="Fifth Banner (French Cruller)">
+                            <img src="img/Menu_Banner_FC_Full.png" alt="Fifth Banner (French Cruller)">
                             <div class="carousel-caption"></div>
                         </div>
                     </div>
@@ -87,9 +87,9 @@
                 <!--/carousel-->
 
            <!-- </div>
-            <!--/col-->
-     <!--   </div>    
-        <!--/row for carousel-->
+            <!-/col-->
+     <!--   </div>
+        <!-/row for carousel-->
 
   <!--  </div> -->
     <!--/container-->
